create basic structure of pagination

--- a/ema-john-pagination-client-starter/src/components/Shop/Shop.css
+++ b/ema-john-pagination-client-starter/src/components/Shop/Shop.css
@@ -25,3 +25,17 @@
     justify-content: space-between;
     align-items: center;
 }
+.pagination{
+    background: #FF9900;
+    width: 90%;
+    height: 56px;
+    font-size: 21px;
+    margin: 10px auto;
+    border-radius: 4px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    gap: 2px;
+    align-items: center;
+    /* text-align: center; */
+}
